// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkInfoBannerInner should render correctly with "style" attribute equal to "onContrast" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--info bpk-info-banner--style-onContrast"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__info-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with "type" attribute equal to "error" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--error bpk-info-banner--style-default"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__error-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with "type" attribute equal to "error" and "icon" equal to CurrencyIcon 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--error bpk-info-banner--style-default"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__error-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 10.5c5.8 0 10.5-2.015 10.5-4.5S17.8 1.5 12 1.5 1.5 3.515 1.5 6s4.701 4.5 10.5 4.5M1.658 12.83a1.5 1.5 0 0 1 2.012-.673l.001.001C4.886 12.766 7.628 13.5 12 13.5s7.114-.734 8.33-1.342a1.5 1.5 0 0 1 1.36 2.674l-.02.01c-1.785.892-5.042 1.658-9.67 1.658s-7.886-.766-9.67-1.658a1.5 1.5 0 0 1-.673-2.012zm2.012 5.328a1.5 1.5 0 0 0-1.36 2.674l.02.01C4.113 21.734 7.371 22.5 12 22.5s7.886-.766 9.67-1.658a1.5 1.5 0 1 0-1.32-2.694l-.02.01c-1.216.608-3.958 1.342-8.33 1.342s-7.114-.734-8.33-1.342"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with "type" attribute equal to "info" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--info bpk-info-banner--style-default"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__info-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with "type" attribute equal to "success" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--success bpk-info-banner--style-default"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__success-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5m5.56-12.44a1.5 1.5 0 0 0-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 0 0-2.12 2.122l3 3a1.5 1.5 0 0 0 2.12 0z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with "type" attribute equal to "warning" 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--warning bpk-info-banner--style-default"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__warning-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with a custom banner-alert class name 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--warning bpk-info-banner--style-default custom-class"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__warning-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with a custom class name 1`] = `
<DocumentFragment>
  <div
    class="custom-class"
  >
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--warning bpk-info-banner--style-default"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__warning-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with a element based message 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--success bpk-info-banner--style-default"
          >
            <button
              aria-expanded="false"
              class="bpk-info-banner__header bpk-info-banner__header--expandable"
              type="button"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__success-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5m5.56-12.44a1.5 1.5 0 0 0-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 0 0-2.12 2.122l3 3a1.5 1.5 0 0 0 2.12 0z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                <p>
                  All 
                  <span>
                    good
                  </span>
                </p>
              </span>
              <span
                class="bpk-info-banner__toggle"
              >
                <div
                  class="bpk-info-banner__toggle-button"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
                      />
                    </svg>
                  </span>
                  <span
                    class="bpk-visually-hidden"
                    data-backpack-ds-component="VisuallyHidden"
                  >
                    View more
                  </span>
                </div>
              </span>
            </button>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                >
                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with animateOnLeave 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--warning bpk-info-banner--style-default"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__warning-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
              <span
                class="bpk-info-banner__toggle"
              >
                <button
                  aria-label="Dismiss"
                  class="bpk-close-button__default"
                  data-backpack-ds-component="CloseButton"
                  title="Dismiss"
                  type="button"
                >
                  <span
                    class="bpk-close-button-icon"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--warning bpk-info-banner--style-default"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__warning-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with child nodes 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--success bpk-info-banner--style-default"
          >
            <button
              aria-expanded="false"
              class="bpk-info-banner__header bpk-info-banner__header--expandable"
              type="button"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__success-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5m5.56-12.44a1.5 1.5 0 0 0-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 0 0-2.12 2.122l3 3a1.5 1.5 0 0 0 2.12 0z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
              <span
                class="bpk-info-banner__toggle"
              >
                <div
                  class="bpk-info-banner__toggle-button"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
                      />
                    </svg>
                  </span>
                  <span
                    class="bpk-visually-hidden"
                    data-backpack-ds-component="VisuallyHidden"
                  >
                    View more
                  </span>
                </div>
              </span>
            </button>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                >
                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with dismissable option 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div>
          <div
            class="bpk-info-banner bpk-info-banner--warning bpk-info-banner--style-default"
          >
            <div
              class="bpk-info-banner__header"
            >
              <span
                class="bpk-info-banner__icon"
              >
                <div
                  class="bpk-info-banner__warning-icon"
                >
                  <span
                    style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 6a1.498 1.498 0 1 1-1.498 1.498A1.5 1.5 0 0 1 12 6m1.493 10.676a1.5 1.5 0 0 1-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 0 1 2.98 0l.01.175.003 4.501z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="bpk-info-banner__message"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
              </span>
              <span
                class="bpk-info-banner__toggle"
              >
                <button
                  aria-label="Dismiss"
                  class="bpk-close-button__default"
                  data-backpack-ds-component="CloseButton"
                  title="Dismiss"
                  type="button"
                >
                  <span
                    class="bpk-close-button-icon"
                  >
                    <svg
                      aria-hidden="true"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
            <div
              style="height: 0px; overflow: hidden; transition: height 200ms ease;"
            >
              <div
                style="display: none;"
              >
                <div
                  class="bpk-info-banner__children-container--no-action"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBannerInner should render correctly with show set false 1`] = `<DocumentFragment />`;
